# api-rust

./: .env  Cargo.toml  README.md
migrations/: 00001_roles_table.sql  00002_groups_table.sql  00003_users_table.sql  00004_group_roles_table.sql  00005_user_groups_table.sql
src/: main.rs  routes.rs
src/controllers/: roles.rs
src/models/: mod.rs  role.rs
