[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }